--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "pg": "^7.11.0"
   },
   "devDependencies": {
+    "@types/async": "^3.0.0",
     "@types/express": "^4.17.0",
     "@types/formidable": "^1.0.31",
     "@types/node": "^12.0.8",
     "@types/pg": "^7.4.14",
+    "async": "^3.1.0",
     "typescript": "^3.5.2"
   }
 }
