--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
     "watch-ts": "tsc -w",
-    "watch-run": "nodemon ./dist"
+    "watch-run": "nodemon ./dist",
+    "clean": "rm -rf dist"
   },
   "author": "",
   "license": "ISC",
